--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
       </div>
       <ul ng-hide="listHide" class="ng-hide" id="lists">
         <li><a class="list-link" href="https://trove.nla.gov.au/list?id=116901">miscegenation</a></li>
+        <li><a class="list-link" href="https://trove.nla.gov.au/list?id=116902">miscegenation3</a></li>
       </ul>
       <script>
         // ADD YOUR TROVE API KEY
